Update missing code